app-chart/templates/app-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: skupper-proj1
  name: app-a
  annotations: {}
spec:
  selector:
    matchLabels:
      app: app-a
  replicas: 1
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: container
          image: >-
            quay.io/mathianasj/skupper-app-a:master
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets: []
  strategy:
    type: Recreate
  paused: false
