app-chart/templates/app-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: skupper-proj2
  name: app-b
  annotations:
    
    skupper.io/proxy: http
    skupper.io/port: 8080
    
spec:
  selector:
    matchLabels:
      app: app-b
  replicas: 1
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: container
          image: >-
            quay.io/mathianasj/skupper-app-b:master
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets: []
  strategy:
    type: Recreate
  paused: false
